--- a/COVID_19.ipynb
+++ b/COVID_19.ipynb
@@ -21,10 +21,21 @@
     },
     "colab": {
       "name": "COVID_19.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/RajSalvi738/COVID_19/blob/master/COVID_19.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -101,7 +112,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 888
+          "height": 787
         },
         "outputId": "082662ca-285b-40c7-e83a-9937d12c8ed6"
       },
@@ -436,7 +447,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         },
         "outputId": "a92d3bfc-ab34-4d67-80f7-9345c72a11eb"
       },
@@ -464,7 +475,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 622
+          "height": 538
         },
         "outputId": "e39ec3f8-63a5-4165-ecab-49ad12acfbb1"
       },
